// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextArea Bold Label 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="sc-AxhCb jjzmeM"
  >
    <label
      className="sc-AxgMl egyxdi"
      htmlFor="TextAreaBold"
    >
      Message
       
    </label>
    <textarea
      className="sc-AxhUy bhEZNb"
      data-testid={null}
      id="TextAreaBold"
      label="Message"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextArea Default 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="sc-AxhCb jjzmeM"
  >
    <label
      className="sc-AxgMl cgcTfc"
      htmlFor="TextArea01"
    >
      Message
       
    </label>
    <textarea
      className="sc-AxhUy bhEZNb"
      data-testid="Test-id"
      id="TextArea01"
      label="Message"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextArea Full-width 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="sc-AxhCb hzpTdb"
  >
    <label
      className="sc-AxgMl cgcTfc"
      htmlFor="TextArea05"
    >
      Message
       
    </label>
    <textarea
      className="sc-AxhUy dwdIwU"
      data-testid={null}
      id="TextArea05"
      label="Message"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextArea Inverted 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Box__BoxWrapper-jr1api-0 cQxHnQ"
    data-testid={null}
  >
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
    >
      <div
        className="sc-AxhCb jjzmeM"
      >
        <label
          className="sc-AxgMl jMJQhB"
          htmlFor="TextArea06"
        >
          Message
           
        </label>
        <textarea
          className="sc-AxhUy fGfSEI"
          data-testid={null}
          id="TextArea06"
          label="Message"
        />
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
    >
      <div
        className="sc-AxhCb jjzmeM"
      >
        <label
          className="sc-AxgMl jMJQhB"
          htmlFor="TextArea07"
        >
          Message
           
        </label>
        <textarea
          className="sc-AxhUy hohRPI"
          data-testid={null}
          id="TextArea07"
          label="Message"
        />
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
    >
      <div
        className="sc-AxhCb jjzmeM"
      >
        <label
          className="sc-AxgMl jMJQhB"
          htmlFor="TextArea08"
        >
          Message
           
        </label>
        <textarea
          className="sc-AxhUy jQQZnw"
          data-testid={null}
          id="TextArea08"
          label="Message"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextArea Mandatory 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="sc-AxhCb jjzmeM"
  >
    <label
      className="sc-AxgMl cgcTfc"
      htmlFor="TextAreaMandatory"
    >
      Message
       
      <span>
         *
      </span>
    </label>
    <textarea
      className="sc-AxhUy bhEZNb"
      data-testid={null}
      id="TextAreaMandatory"
      label="Message"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextArea Size 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="sc-AxhCb jjzmeM"
  >
    <label
      className="sc-AxgMl cgcTfc"
      htmlFor="TextArea02"
    >
      Message
       
    </label>
    <textarea
      className="sc-AxhUy bhEZNb"
      cols="50"
      data-testid={null}
      id="TextArea02"
      label="Message"
      rows="5"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextArea States 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
  >
    <div
      className="sc-AxhCb jjzmeM"
    >
      <label
        className="sc-AxgMl bhHUUc"
        htmlFor="TextArea03"
      >
        Message
         
      </label>
      <textarea
        className="sc-AxhUy lienIj"
        data-testid={null}
        id="TextArea03"
        label="Message"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
  >
    <div
      className="sc-AxhCb jjzmeM"
    >
      <label
        className="sc-AxgMl fZtnNx"
        htmlFor="TextArea04"
      >
        Message
         
      </label>
      <textarea
        className="sc-AxhUy CAJa-D"
        data-testid={null}
        id="TextArea04"
        label="Message"
      />
    </div>
  </div>
</div>
`;
